# telegram-mini-app-template

./: pyproject.toml
src/: main.py
src/backend/: create_app.py  lifespan.py  routes.py
src/backend/bot/handlers/: __init__.py  main_commands.py
src/backend/bot/markups/: __init__.py  main_kb.py
src/backend/bot/utils/: tg_auth.py
src/backend/web/: factory.py
src/backend/web/frontend/: index.html
src/backend/web/frontend/static/css/: base.css
src/backend/web/frontend/static/js/: app.js
src/backend/web/frontend/static/js/components/: cartSheet.js  catalog.js  state.js  theme.js
src/backend/web/frontend/templates/: base.html  index.html
src/backend/web/middlewares/: deps.py
src/backend/web/routers/: api.py  front.py
src/core/: config.py  db_helper.py
src/core/mixins/: __init__.py  db_mixins.py
src/core/models/: __init__.py  base.py  cart.py  custumer.py  order.py  payment.py  product.py
