[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
aiogram = "^3.22.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
alembic = "^1.16.5"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"
pydantic-settings = "^2.10.1"
fastapi = {extras = ["standard"], version = "^0.116.1"}



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
